--- a/multibuild/CMakeLists.txt
+++ b/multibuild/CMakeLists.txt
@@ -28,6 +28,7 @@ ExternalProject_Add(
     -DCMAKE_BUILD_TYPE=${_build_type}
     -DGAMMARAY_MULTI_BUILD=OFF
     -DGAMMARAY_PROBE_ONLY_BUILD=ON
+    -DGAMMARAY_BUILD_CLI_INJECTOR=OFF
     -DGAMMARAY_INSTALL_QT_LAYOUT=${GAMMARAY_INSTALL_QT_LAYOUT}
     -DGAMMARAY_BUILD_UI=${GAMMARAY_BUILD_UI}
     -DGAMMARAY_OUTPUT_PREFIX=${CMAKE_BINARY_DIR}
