CMakeLists.txt - restore the hack for finding QtQuick private headers needed with Qt5.7 on QNX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -405,6 +405,13 @@ if(Qt5Core_FOUND)
   endif()
   if(Qt5Quick_FOUND)
     check_private_headers_exist("Qt5Quick" "${Qt5Quick_PRIVATE_INCLUDE_DIRS}")
+    #HACK: CMake with broken Qt5Quick_PRIVATE_INCLUDE_DIRS
+    if(NOT "${Qt5Quick_PRIVATE_INCLUDE_DIRS}" MATCHES "/QtQuick/")
+      string(REPLACE "/QtCore" "/QtQuick" replaceme "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
+      list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${Qt5Qml_PRIVATE_INCLUDE_DIRS})
+      list(APPEND Qt5Quick_PRIVATE_INCLUDE_DIRS ${replaceme})
+      list(REMOVE_DUPLICATES Qt5Quick_PRIVATE_INCLUDE_DIRS)
+    endif()
     check_private_header_exists("private/qquickitem_p.h" "${Qt5Quick_PRIVATE_INCLUDE_DIRS}")
   endif()
   set(HAVE_PRIVATE_QT_HEADERS TRUE)
