CMakeLists.txt - restore the hack for finding QtQml private headers needed with Qt5.7 on QNX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -402,6 +402,13 @@ if(Qt5Core_FOUND)
   check_private_headers_exist("Qt5Gui" "${Qt5Gui_PRIVATE_INCLUDE_DIRS}")
   if(Qt5Qml_FOUND)
     check_private_headers_exist("Qt5Qml" "${Qt5Qml_PRIVATE_INCLUDE_DIRS}")
+    #HACK: CMake with broken Qt5Qml_PRIVATE_INCLUDE_DIRS
+    if(NOT "${Qt5Qml_PRIVATE_INCLUDE_DIRS}" MATCHES "/QtQml/")
+      string(REPLACE "/QtCore" "/QtQml" replaceme "${Qt5Core_PRIVATE_INCLUDE_DIRS}")
+      list(APPEND Qt5Qml_PRIVATE_INCLUDE_DIRS ${replaceme})
+      list(REMOVE_DUPLICATES Qt5Qml_PRIVATE_INCLUDE_DIRS)
+    endif()
+    check_private_header_exists("private/qqmlabstractbinding_p.h" "${Qt5Qml_PRIVATE_INCLUDE_DIRS}")
   endif()
   if(Qt5Quick_FOUND)
     check_private_headers_exist("Qt5Quick" "${Qt5Quick_PRIVATE_INCLUDE_DIRS}")
