Add timer inspector example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -6,6 +6,7 @@ endif()
 
 if(Qt5Widgets_FOUND)
   add_subdirectory(signal-slot)
+  add_subdirectory(timer)
   add_subdirectory(widget-layouting)
 endif()
 
