--- a/plugins/timertop/gammaray_timertop.desktop.in
+++ b/plugins/timertop/gammaray_timertop.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Timers
 X-GammaRay-Id=gammaray_timertop
-X-GammaRay-Types="QTimer;QQmlTimer;QUnifiedTimer"
+X-GammaRay-Types="QTimer;QQmlTimer;QUnifiedTimer;QObject"
 X-GammaRay-ServiceTypes=com.kdab.GammaRay.ToolFactory
 Exec=${plugin_exec}
