Move header data to the client model, so we get it properly translated

--- a/plugins/timertop/CMakeLists.txt
+++ b/plugins/timertop/CMakeLists.txt
@@ -36,6 +36,7 @@ if(GAMMARAY_BUILD_UI)
     timertopwidget.cpp
     timertopinterface.cpp
     timertopclient.cpp
+    clienttimermodel.cpp
   )
 
   gammaray_add_plugin(gammaray_timertop_ui_plugin
