Fix installation of non-hidpi icons

--- a/ui/resources/CMakeLists.txt
+++ b/ui/resources/CMakeLists.txt
@@ -6,10 +6,10 @@ if(UNIX AND NOT APPLE AND GAMMARAY_BUILD_UI)
             set(scaled_size ${size}x${size})
 
             if(${scale} GREATER 1)
-                set(scaled_size ${size}x${size}@${scale})
+                set(scaled_size ${size}x${size}@${scale}x)
             endif()
 
-            set(source gammaray/GammaRay-${scaled_size}x.png)
+            set(source gammaray/GammaRay-${scaled_size}.png)
 
             if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${source})
                 install(
