Make the CI happpy
* Use override instead of Q_DECLARE_OVERRIDE
* Use nullptr instead of Q_NULLPTR
* Use Qt4-style connects in code that needs to be Qt4 compatible
* Guard Qt 5.10 -only code to be only compiled if 5.10 is actually
  available
* Fall back to 90s' C++, because of MSVC 2010
* raise requirements for the QuickImplicitBindingDependencyProvider
  up to Qt 5.7, because private API changed there.
* Also deletes two unused constructors.

--- a/plugins/quickinspector/CMakeLists.txt
+++ b/plugins/quickinspector/CMakeLists.txt
@@ -19,7 +19,6 @@ if(Qt5Quick_FOUND)
     quickscenegraphmodel.cpp
     quickpaintanalyzerextension.cpp
     quickoverlay.cpp
-    quickimplicitbindingdependencyprovider.cpp
     materialextension/materialextension.cpp
     materialextension/materialshadermodel.cpp
     materialextension/qquickopenglshadereffectmaterialadaptor.cpp
@@ -33,6 +32,10 @@ if(Qt5Quick_FOUND)
     JSON gammaray_quickinspector.json
     SOURCES ${gammaray_quickinspector_srcs}
   )
+
+  if(NOT Qt5Quick_VERSION VERSION_LESS 5.7)
+    target_sources(gammaray_quickinspector PUBLIC quickimplicitbindingdependencyprovider.cpp)
+  endif()
 
   target_include_directories(gammaray_quickinspector SYSTEM PRIVATE ${Qt5Quick_PRIVATE_INCLUDE_DIRS})
   target_link_libraries(gammaray_quickinspector
