--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -415,7 +415,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD AND Qt5Core_FOUND AND NOT Qt5Core_VERSION_MINO
         target_link_libraries(qmlsupporttest gammaray_core Qt5::Quick)
     endif()
 
-    if(Qt5Quick_FOUND)
+    if(Qt5Quick_FOUND AND NOT Qt5Qml_VERSION VERSION_LESS 5.10)
         gammaray_add_probe_test(bindinginspectortest
             bindinginspectortest.cpp
             ${CMAKE_SOURCE_DIR}/plugins/qmlsupport/qmlbindingprovider.cpp
