Add tab focus chain visualization to the widget inspector

--- a/plugins/widgetinspector/CMakeLists.txt
+++ b/plugins/widgetinspector/CMakeLists.txt
@@ -64,6 +64,7 @@ if(GAMMARAY_BUILD_UI)
     widgetinspectorinterface.cpp
     widgetinspectorclient.cpp
     widgetclientmodel.cpp
+    widgetremoteview.cpp
 
     waextension/widgetattributetab.cpp
 
