--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -537,7 +537,9 @@ elseif(APPLE)
   set(CMAKE_DEBUG_POSTFIX "_debug")
 endif()
 
-if(NOT CMAKE_BUILD_TYPE MATCHES "^[Rr]el")
+string(TOUPPER "${CMAKE_BUILD_TYPE}" UPPERCASE_CMAKE_BUILD_TYPE)
+
+if(NOT UPPERCASE_CMAKE_BUILD_TYPE MATCHES "^REL")
   set(GAMMARAY_PROBE_ABI_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
 endif()
 
@@ -549,7 +551,7 @@ add_definitions(
   -DQT_STRICT_ITERATORS
 )
 
-if(CMAKE_BUILD_TYPE MATCHES "^[Rr]elease$")
+if(UPPERCASE_CMAKE_BUILD_TYPE MATCHES "^RELEASE$")
   add_definitions(-DQT_NO_DEBUG_OUTPUT)
 endif()
 
