--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -118,7 +118,7 @@ target_include_directories(gammaray_core PUBLIC $<BUILD_INTERFACE:${CMAKE_CURREN
 target_include_directories(gammaray_core SYSTEM PRIVATE ${CMAKE_SOURCE_DIR}/3rdparty/backward-cpp)
 target_link_libraries(gammaray_core
   LINK_PUBLIC gammaray_common
-  LINK_PRIVATE gammaray_common_internal gammaray_kitemmodels ${DL_LIBRARY}
+  LINK_PRIVATE gammaray_common_internal gammaray_kitemmodels ${CMAKE_DL_LIBS}
 )
 set_target_properties(gammaray_core PROPERTIES
   ${GAMMARAY_DEFAULT_LIBRARY_PROPERTIES}
