--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,7 +204,7 @@ gammaray_option(GAMMARAY_BUILD_CLI_INJECTOR "Build command line injector on Wind
 
 set(GAMMARAY_BUILD_DOCS_DEFAULT ON)
 set(GAMMARAY_DISABLE_FEEDBACK_DEFAULT OFF)
-if(${GAMMARAY_PROBE_ONLY_BUILD})
+if(GAMMARAY_PROBE_ONLY_BUILD OR CMAKE_CROSSCOMPILING)
   set(GAMMARAY_BUILD_DOCS_DEFAULT OFF)
   set(GAMMARAY_DISABLE_FEEDBACK_DEFAULT ON)
 endif()
