Appveyor: allow to replace more ignores on local build

--- a/appveyor.ini
+++ b/appveyor.ini
@@ -16,7 +16,7 @@ Command = craft
 #Values need to be overwritten to create a chache
 UseCache = True
 CreateCache = False
-Ignores = dev-util/perl
+Ignores = ;win32libs/icu;binary/mysql;win32libs/dbus;dev-util/perl;win32libs/openssl;frameworks/tier1/syntax-highlighting;qt-apps/kdstatemachineeditor;dev-util/nsis;
 Msys = C:\msys64\
 APPVEYOR_BUILD_FOLDER = ${Variables:Root}
 
@@ -46,7 +46,7 @@ QtSDK/Path=C:\Qt
 QtSDK/Enabled=True
 QtSDK/PackageQtSDK=False
 # the ignores also include packages only needed for the client build
-Blueprints/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus;win32libs/openssl;frameworks/tier1/syntax-highlighting;qt-apps/kdstatemachineeditor;dev-util/nsis;
+Blueprints/Ignores = ${Variables:Ignores}
 Blueprints/BlueprintRoot = ${Variables:Root}/blueprints
 CraftDebug/DumpSettings=True
 BlueprintVersions/kf5 = 5.40.0
@@ -68,4 +68,4 @@ General/Options = dynamic.gammarayProbeOnly=True;dynamic.disableGammarayBuildCli
 QtSDK/Compiler = msvc2017_64
 General/ABI = windows-msvc2017_64-cl
 # we need openssl etc for the client build, so don't ignore it
-Blueprints/Ignores = ${Variables:Ignores};win32libs/icu;binary/mysql;win32libs/dbus
+Blueprints/Ignores = win32libs/icu;binary/mysql;win32libs/dbus;dev-util/perl;
