--- a/plugins/guisupport/CMakeLists.txt
+++ b/plugins/guisupport/CMakeLists.txt
@@ -8,6 +8,7 @@ set(gammaray_guisupport_srcs
 gammaray_add_plugin(gammaray_guisupport JSON gammaray_guisupport.json DESKTOP gammaray_guisupport.desktop SOURCES ${gammaray_guisupport_srcs})
 target_link_libraries(gammaray_guisupport gammaray_core)
 if(Qt5Core_FOUND)
+  target_include_directories(gammaray_guisupport SYSTEM PRIVATE ${Qt5Gui_PRIVATE_INCLUDE_DIRS})
   target_link_libraries(gammaray_guisupport Qt5::Gui)
 else()
   target_link_libraries(gammaray_guisupport ${QT_GUI_LIBRARIES})
