Fix probe loading with default plugin layout
The probe name and the loader name clashed with the default
naming as the probe finder was basically looking for 'gammaray_probe*'

--- a/probe/CMakeLists.txt
+++ b/probe/CMakeLists.txt
@@ -51,8 +51,8 @@ set_target_properties(gammaray_probe PROPERTIES
 )
 
 if(WIN32)
-  add_library(gammaray_probe_win SHARED entry_win.cpp)
-  set_target_properties(gammaray_probe_win PROPERTIES
+  add_library(gammaray_winloader SHARED entry_win.cpp)
+  set_target_properties(gammaray_winloader PROPERTIES
     LIBRARY_OUTPUT_DIRECTORY "${GAMMARAY_OUTPUT_PREFIX}/${PROBE_INSTALL_DIR}"
     RUNTIME_OUTPUT_DIRECTORY "${GAMMARAY_OUTPUT_PREFIX}/${PROBE_INSTALL_DIR}"
   )
@@ -65,13 +65,13 @@ if(NOT GAMMARAY_INSTALL_QT_LAYOUT)
     install(FILES "$<TARGET_PDB_FILE_DIR:gammaray_core>/$<TARGET_PDB_FILE_NAME:gammaray_core>" DESTINATION ${PROBE_INSTALL_DIR} CONFIGURATIONS Debug RelWithDebInfo)
   endif()
   if(WIN32)
-    set_target_properties(gammaray_probe_win PROPERTIES PREFIX "")
-    install(TARGETS gammaray_probe_win DESTINATION ${PROBE_INSTALL_DIR})
+    set_target_properties(gammaray_winloader PROPERTIES PREFIX "")
+    install(TARGETS gammaray_winloader DESTINATION ${PROBE_INSTALL_DIR})
   endif()
 else()
   set_target_properties(gammaray_probe PROPERTIES OUTPUT_NAME gammaray_probe-${GAMMARAY_PROBE_ABI})
   if(WIN32)
-    set_target_properties(gammaray_probe_win PROPERTIES OUTPUT_NAME gammaray_probe_win-${GAMMARAY_PROBE_ABI})
+    set_target_properties(gammaray_winloader PROPERTIES OUTPUT_NAME gammaray_winloader-${GAMMARAY_PROBE_ABI})
   endif()
   if(NOT GAMMARAY_PROBE_ONLY_BUILD)
     install(TARGETS gammaray_probe EXPORT GammaRayTargets ${INSTALL_TARGETS_DEFAULT_ARGS})
@@ -86,12 +86,12 @@ else()
     install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/gammaray_probe-android-dependencies.xml DESTINATION ${LIB_INSTALL_DIR})
 
     if(WIN32)
-      install(TARGETS gammaray_probe_win ${INSTALL_TARGETS_DEFAULT_ARGS})
+      install(TARGETS gammaray_winloader ${INSTALL_TARGETS_DEFAULT_ARGS})
     endif()
   else()
     install(TARGETS gammaray_probe ${INSTALL_TARGETS_DEFAULT_ARGS})
   if(WIN32)
-    install(TARGETS gammaray_probe_win ${INSTALL_TARGETS_DEFAULT_ARGS})
+    install(TARGETS gammaray_winloader ${INSTALL_TARGETS_DEFAULT_ARGS})
   endif()
   endif()
       if(MSVC)
