--- a/docs/manual/CMakeLists.txt
+++ b/docs/manual/CMakeLists.txt
@@ -7,18 +7,31 @@ macro(qt5_build_doc _qdocconf_name)
   get_filename_component(QDOC_INDEX_DIR ${QDOC_QTCORE_INDEX} DIRECTORY)
   get_filename_component(QDOC_INDEX_DIR ${QDOC_INDEX_DIR} DIRECTORY)
 
+  # run the attribution scanner to collect 3rdparty license information
+  file(GLOB _qt_attributions ${CMAKE_SOURCE_DIR} "3rdparty/*/qt_attribution.json")
+  add_custom_command(
+    OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/codecontributions.qdoc
+    COMMAND ${QTATTRIBUTIONSSCANNER_EXECUTABLE}
+        --output ${CMAKE_CURRENT_BINARY_DIR}/codecontributions.qdoc
+        --filter QDocModule=gammaray-manual
+        ${CMAKE_SOURCE_DIR}
+    DEPENDS ${_qt_attributions} ${CMAKE_CURRENT_SOURCE_DIR}/${_qdocconf_name}-offline.qdocconf
+  )
+
   # offline docs
   # run qdoc to get qhp file
   set(_qdoc_output_dir ${CMAKE_CURRENT_BINARY_DIR}/${_qdocconf_name})
   # FIXME: this should rather be taken from the qdocconf file?
   file(GLOB_RECURSE _qdoc_srcs ${CMAKE_CURRENT_SOURCE_DIR} "*.qdoc")
   file(GLOB _qdoc_imgs ${CMAKE_CURRENT_SOURCE_DIR} "images/*.png")
+  list(APPEND _qdoc_srcs "${CMAKE_CURRENT_BINARY_DIR}/codecontributions.qdoc")
   add_custom_command(
     OUTPUT ${_qdoc_output_dir}/${_qdocconf_name}.qhp
     COMMAND ${CMAKE_COMMAND} -E env
         QT_INSTALL_DOCS=${QDOC_TEMPLATE_DIR}
         QT_VERSION_TAG=${GAMMARAY_PLUGIN_VERSION}
         QT_VERSION=${GAMMARAY_VERSION}
+        BUILDDIR=${CMAKE_CURRENT_BINARY_DIR}
       ${QDOC_EXECUTABLE}
       --indexdir ${QDOC_INDEX_DIR}
       --outputdir ${_qdoc_output_dir}
@@ -47,6 +60,7 @@ macro(qt5_build_doc _qdocconf_name)
         QT_INSTALL_DOCS=${QDOC_TEMPLATE_DIR}
         QT_VERSION_TAG=${GAMMARAY_PLUGIN_VERSION}
         QT_VERSION=${GAMMARAY_VERSION}
+        BUILDDIR=${CMAKE_CURRENT_BINARY_DIR}
       ${QDOC_EXECUTABLE}
       --indexdir ${QDOC_INDEX_DIR}
       --outputdir ${_qdoc_output_dir}
@@ -62,6 +76,7 @@ macro(qt5_build_doc _qdocconf_name)
         QT_INSTALL_DOCS=${QDOC_TEMPLATE_DIR}
         QT_VERSION_TAG=${GAMMARAY_PLUGIN_VERSION}
         QT_VERSION=${GAMMARAY_VERSION}
+        BUILDDIR=${CMAKE_CURRENT_BINARY_DIR}
       ${QDOC_EXECUTABLE}
       --indexdir ${QDOC_INDEX_DIR}
       --outputdir ${_qdoc_output_dir}
