Allow to show the current clipping area in the QPainter analyzer

--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -32,6 +32,7 @@ set(gammaray_ui_srcs
   utils.cpp
 
   paintanalyzerwidget.cpp
+  paintanalyzerreplayview.cpp
   paintbufferviewer.cpp
 
   propertyeditor/propertycoloreditor.cpp
