clientconnectiontest needs the OSX ASAN workaround
Also, remove the apparently unneeded widget link dependency.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -307,12 +307,12 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD AND NOT GAMMARAY_PROBE_ONLY_BUILD)
             gammaray_add_test(launchertest launchertest.cpp)
             target_include_directories(launchertest PRIVATE ${CMAKE_BINARY_DIR}/launcher)
             target_link_libraries(launchertest gammaray_core gammaray_launcher)
-        endif()
-    endif()
 
-    gammaray_add_test(clientconnectiontest
-        clientconnectiontest.cpp)
-    target_link_libraries(clientconnectiontest gammaray_core gammaray_launcher gammaray_client ${QT_QTWIDGETS_LIBRARIES})
+        endif()
+
+        gammaray_add_test(clientconnectiontest clientconnectiontest.cpp)
+        target_link_libraries(clientconnectiontest gammaray_core gammaray_launcher gammaray_client)
+    endif()
 endif()
 
 
